# wincross

./: .gitignore  README.md  pyproject.toml
wincross/: cli.py  cmake.py  config.py  constants.py  docker.py  doctor.py  util.py  vcpkg.py  wine.py  wrappers.py
